--- a/dom_selection_egghead_02 _svg/index.html
+++ b/dom_selection_egghead_02 _svg/index.html
@@ -7,19 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        .chart{
+        .chart {
             background: lightgray;
             border: 1px solid black;
             min-width: 200px;
             min-height: 350px;
         }
-    .bar{
-        height:30px;
-        margin-bottom: 3px;
-        color:green;
-        background: lightgreen;
-        border: 1px solid black;
-    }
+        
+        .bar {
+            height: 30px;
+            color: green;
+            fill: lightgreen;
+            stroke: black;
+            stroke-width: 2
+        }
     </style>
 </head>
 
