--- a/egghead-d3v4/index.html
+++ b/egghead-d3v4/index.html
@@ -6,6 +6,7 @@
   <script src="//d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
+  <div class="chart"></div>
   <script src="src/app.js"></script>
 </body>
 </html>
