--- a/_06-scatterd-plot-fcc/index.html
+++ b/_06-scatterd-plot-fcc/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <title>Egghead D3 v4</title>
   <script src="//d3js.org/d3.v4.min.js"></script>
+  <style>
+     .chart{
+       width: 800px;
+       height:565px;
+       border: 1px solid black;
+       margin: 0px auto;
+     }
+  </style>
 </head>
 <body>
   <div class="chart"></div>
